# HCS_test_assignment

./: .gitignore  Dockerfile  README.md  alembic.ini  celery_worker.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2053ac45a8f5_initial_migration.py  9313636b312e_added_bills_relationship_to_apartments.py
app/: database.py  main.py  models.py  routes.py  schemas.py  tasks.py
tests/: test_celery.py  test_main.py
